src/main/java/org/example/solidPrinciples/dependancyInversion/bad/AddOperation.java
package org.example.solidPrinciples.dependancyInversion.bad;

public class AddOperation {
    public int add(int a, int b){
        return a+b;
    }
}
